--- a/analysis.html
+++ b/analysis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>岗位胜任力测评 - 数据分析</title>
+    <title>大礼堂中心站能力测试评分系统 - 数据分析</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -267,6 +267,9 @@
                                 <div class="card-body">
                                     <div class="chart-container">
                                         <canvas id="individualSectionChart"></canvas>
+                                    </div>
+                                    <div id="individualSectionBreakdownCharts" class="row mt-4">
+                                        <!-- Small section breakdown charts will be loaded here by JS -->
                                     </div>
                                 </div>
                             </div>
