--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大礼堂中心站能力测评评分系统</title>
+    <title>大礼堂中心站能力测试评分系统</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,7 +15,7 @@
              <i class="bi bi-check2-circle logo-icon text-primary"></i> <!-- Using a checkmark circle icon -->
         </div>
         
-        <h1 class="text-center index-title">大礼堂中心站能力测评评分系统</h1>
+        <h1 class="text-center index-title">大礼堂中心站能力测试评分系统</h1>
         
         <div class="row g-lg-5 g-md-4 justify-content-center">
             <!-- Row 1 -->
