--- a/question-bank.html
+++ b/question-bank.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>岗位胜任力测评 - 题库维护</title>
+    <title>大礼堂中心站能力测试评分系统 - 题库维护</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -99,6 +99,11 @@
             font-weight: 500;
             border-bottom: 1px solid #eee;
             padding-bottom: 10px;
+        }
+        /* 新增：保留换行符样式 */
+        .preserve-newlines {
+            white-space: pre-wrap;
+            word-wrap: break-word; /* 兼容旧浏览器 */
         }
     </style>
 </head>
@@ -237,7 +242,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="section" class="form-label">所属板块</label>
-                            <input type="text" class="form-control" id="section" placeholder="请输入所属板块">
+                            <input type="text" class="form-control" id="section" placeholder="例如：安全规定、操作流程">
+                        </div>
+                        <div class="mb-3">
+                            <label for="knowledgeSource" class="form-label">知识点来源 <span class="text-muted small">(选填)</span></label>
+                            <textarea class="form-control" id="knowledgeSource" rows="2" placeholder="例如：参见《XX手册》第 Y 章 Z 节"></textarea>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">适用岗位</label>
