--- a/assessment.html
+++ b/assessment.html
@@ -266,13 +266,13 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="name" class="form-label">姓名</label>
-                                <input type="text" class="form-control" id="name" required>
+                                <input type="text" class="form-control" id="name" required placeholder="请输入姓名" autocomplete="off">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="employeeId" class="form-label">工号</label>
-                                <input type="text" class="form-control" id="employeeId" required>
+                                <input type="text" class="form-control" id="employeeId" required placeholder="请输入工号" autocomplete="off">
                             </div>
                         </div>
                     </div>
@@ -399,8 +399,8 @@
                                 <button class="btn btn-success me-2" id="submitBtn">
                                     <i class="bi bi-check-circle me-1"></i> 提交测评
                                 </button>
-                                <button class="btn btn-danger" id="terminateBtn">
-                                    <i class="bi bi-stop-circle me-1"></i> 终止测评
+                                <button class="btn btn-warning" id="pauseBtn">
+                                    <i class="bi bi-pause-circle me-1"></i> 暂存测评
                                 </button>
                             </div>
                         </div>
