--- a/assessment.html
+++ b/assessment.html
@@ -339,7 +339,8 @@
                 <div class="card mb-4 shadow-sm rounded-3">
                     <div class="card-body">
                         <h5 class="card-title mb-3">题目总览</h5>
-                        <div class="d-flex justify-content-between align-items-center mb-3">
+                        <!-- Modify the flex container for badges -->
+                        <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-start align-items-sm-center mb-3 gap-1">
                             <span class="badge bg-light text-dark p-2">总题数: <span id="totalQuestions">0</span></span>
                             <span class="badge bg-success p-2">已答: <span id="answeredQuestions">0</span></span>
                             <span class="badge bg-danger p-2">未答: <span id="unansweredQuestions">0</span></span>
@@ -388,21 +389,23 @@
                         </div>
 
                         <!-- 操作按钮 -->
-                        <div class="d-flex justify-content-between mt-4">
+                        <!-- Modify the flex container for buttons and remove inner div -->
+                        <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-stretch align-items-sm-center mt-4 gap-2">
                             <button class="btn btn-outline-primary" id="prevBtn" disabled>
                                 <i class="bi bi-arrow-left me-1"></i> 上一题
                             </button>
-                            <div> <!-- Group next and submit/terminate for better spacing -->
-                                <button class="btn btn-primary me-2" id="nextBtn">
+                            <!-- Remove the wrapping div below -->
+                            <!-- <div> --> 
+                                <button class="btn btn-primary" id="nextBtn"> <!-- Removed me-2 -->
                                     下一题 <i class="bi bi-arrow-right ms-1"></i>
                                 </button>
-                                <button class="btn btn-success me-2" id="submitBtn">
+                                <button class="btn btn-success" id="submitBtn"> <!-- Removed me-2 -->
                                     <i class="bi bi-check-circle me-1"></i> 提交测评
                                 </button>
                                 <button class="btn btn-warning" id="pauseBtn">
                                     <i class="bi bi-pause-circle me-1"></i> 暂存测评
                                 </button>
-                            </div>
+                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
