--- a/assessment.html
+++ b/assessment.html
@@ -303,7 +303,7 @@
                     </div>
                     
                     <div id="sectionSelection" class="module-selector d-none">
-                        <h6 class="mb-3">板块选择</h6>
+                        <h6 class="mb-3">随机题数量</h6>
                         <div class="row g-3" id="sectionCards"></div>
                     </div>
 
