--- a/analysis.html
+++ b/analysis.html
@@ -336,6 +336,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.13.1/dist/av-min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/analysis.js?v=" + Date.now()></script>
     <script>
