--- a/assessment.html
+++ b/assessment.html
@@ -312,6 +312,7 @@
                         <button type="button" class="btn btn-start" id="startBtn" disabled>
                             开始测评
                         </button>
+                        <p class="mt-2 mb-0 text-muted small" id="totalSelectedQuestionsHint">总题数: 0</p>
                         <p class="mt-3 mb-0 text-muted small" id="startBtnHint">请填写所有必填信息并选择岗位</p> 
                     </div>
                 </form>
@@ -414,6 +415,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.13.1/dist/av-min.js"></script> 
     <script src="js/main.js"></script>
     <script src="js/assessment.js"></script>
 </body>
