--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- 首先引入 LeanCloud SDK -->
+    <script src="//cdn.jsdelivr.net/npm/leancloud-storage@4/dist/av-min.js"></script>
+    <!-- 然后再引入你自己的脚本 -->
     <script src="js/main.js"></script>
 </body>
 </html> 
