--- a/question-bank.html
+++ b/question-bank.html
@@ -140,6 +140,15 @@
                         <span class="station-label">题库管理</span>
                     </a>
                 </li>
+                <!-- **** MODIFIED: User Auth Station **** -->
+                <li class="line"></li>
+                <li class="station user-auth-station" style="margin-left: auto;"> <!-- Keep push right -->
+                    <a href="#" id="authLink" class="station-link" title="用户状态"> <!-- Link for interaction -->
+                        <span class="station-icon" id="authIconContainer"><i id="authIcon" class="bi bi-person-circle"></i></span> <!-- User icon -->
+                        <span class="station-label" id="authLabel">登录</span> <!-- Label: Default '登录' -->
+                    </a>
+                </li>
+                <!-- **** END MODIFIED **** -->
             </ul>
         </nav>
         
